--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,14 +1,81 @@
-.flofers{
-    background: url(https://kartinki.pibig.info/uploads/posts/2023-03/1680206121_kartinki-pibig-info-p-s-dnem-rozhdeniya-kartinki-mnogo-roz-arti-1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: right;
-    height: 500px;
-    align-items: center;
-    color: white;
+.shtor{
+    background: url(../../imges/main_back.jpg) no-repeat;
+    width: 100%;
+    height: 1000px;
 }
-.flofers_txt{
+.all_txt{
     text-align: center;
-    margin: o auto;
-    font-weight: bold;
+    align-self: center;
+    align-items: center;
+    margin-top: 120px;
+}
+.shtor_txt{
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 30px;
+    line-height: 30px;
+    font-style: italic;
+    padding: 10px 0;
+    color: white;
+    margin-bottom: 40px;
+}
+.main_tit{
+    color: inherit;
+    font-size: 70px;
+    line-height: 96px;
+    /* margin: 10px 0; */
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 4px #000;
+    color: white;
+    width: 1000px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 60px;
+    
+}
+.main_btn{
+    width: 20%;
+    margin: 0 auto;
+    color: white;
+    border: 2px solid white;
+    padding: 10px;
+    font-weight: 500;
+}
+
+.second_tit{
+    color: #222222;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 40px;
+    margin-bottom: 20px;
+
+}
+.second_block{
+    background: url(../../imges/fon.jpeg);
+}
+.second_txt{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.second_min_tit{
+    text-align: center;
+    width: 800px;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+.card_left{
+    width: 60%;
+    padding-right: 20px;
+    padding-top: 40px;
+}
+.card_left_ic-1{
+    width: 40px;
+}
+.card_left_txt{
+    width: calc(100% - 55px);
+}
+.card_right{
+    width: 40%;
+}
+.card_item{
+    margin-bottom: 40px;
 }
