--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -3,7 +3,7 @@
     width: 800px;
     margin: 0 auto;
     font-size: 30px;
-    color: cornflowerblue;
+    colo:black;
     margin-bottom: 40px;
     line-height: 30px;
     
